Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-30137

Deletion & re-creation of key in same flusher iteration results in incorrect item count

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.5.0
    • 5.1.0, 5.1.1, 5.1.2, 5.1.3
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      Seen during commit-validation (http://cv.jenkins.couchbase.com/job/kv_engine-addresssanitizer-master/1514) during ep_testsuite.full_eviction.comp_active suite:

      Running [0001/0152]: expiry (couchstore).../home/couchbase/jenkins/workspace/kv_engine-addresssanitizer-master/kv_engine/engines/ep/tests/ep_testsuite.cc:834 Test failed: `' (Expected `1', got `2' - curr_items stat should be still 1 after overwriting the key that was expired, but not purged yet)
      (297 ms) DIED
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty